scribble-test/src/test/resources/bad/syntax/enabling/Test01.scr
module bad.syntax.enabling.Test02;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		1() from A to B;
		1() from B to C;
	}
	or
	{
		2() from A to B;
	}
	or
	{
		1() from B to C;
	}
}


